# django_playground

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  start_server.sh
config/: settings.py
devops/: Dockerfile  docker-compose.yml
