[tool.poetry]
name = "django_playground"
version = "0.1.0"
description = ""
authors = ["Yeojin <bluemeta@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.5"
uWSGI = "^2.0.19"

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
